--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,21 @@
-<div>
-  <app-navbar (toggleSidebarEmitter)="toggleSidebar()" [isSidebarToggled]="isSidebarToggled"></app-navbar>
-</div>
-<div>
-  <div class="flex flex-row h-screen">
-    <div
-      [ngClass]="{'hidden': !isSidebarToggled}"
-      class="mt-16 w-64 flex-grow-0 bg-orange-600"
-      >
-      <app-sidebar (sidebarItemClickEmitter)="onSidebarItemClick()" [isSidebarToggled]="isSidebarToggled"></app-sidebar>
-    </div>
-    <div class="mt-16 flex-grow">
-      <router-outlet></router-outlet>
+<div class="max-h-screen overflow-hidden">
+  <div>
+    <app-navbar (toggleSidebarEmitter)="toggleSidebar()" [isSidebarToggled]="isSidebarToggled"></app-navbar>
+  </div>
+  <div>
+    <div class="flex flex-row h-screen">
+      <div
+        [ngClass]="{'hidden': !isSidebarToggled}"
+        class="mt-16 w-full md:w-64 flex-grow-0 flex-shrink-0 bg-orange-600 overflow-y-auto overflow-x-hidden"
+        >
+        <app-sidebar (sidebarItemClickEmitter)="onSidebarItemClick()" [isSidebarToggled]="isSidebarToggled"></app-sidebar>
+      </div>
+      <div
+        [ngClass]="{'hidden': isSidebarToggled}"
+        class="mt-16 md:block flex-grow px-8 overflow-y-auto"
+        >
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
