--- a/src/app/plugins/api-explorer/components/api-item/api-item.component.scss
+++ b/src/app/plugins/api-explorer/components/api-item/api-item.component.scss
@@ -1,18 +1,54 @@
-.result-container {
+.lds-ellipsis {
+  display: inline-block;
   position: relative;
-  width: 100%;
-  min-height: 200px;
+  width: 80px;
+  height: 40px;
 }
-
-.inflight
-{
+.lds-ellipsis div {
   position: absolute;
-  width: 100%;
-  top: 10%;
-  height: 90%;
-  z-index: 500;
-  padding-top: 15vh;
-  display: flex;
-  justify-content: center;
-  background-color: rgba(0,0,80,0.05);
+  top: 16px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
