additional api exporer tweaks: - mobile margins - chevrons - scroll to response on fetch complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       </div>
       <div
         [ngClass]="{'hidden': isSidebarToggled}"
-        class="mt-16 md:block flex-grow px-8 overflow-y-auto"
+        class="mt-16 md:block flex-grow px-2 md:px-8 overflow-y-auto"
         >
         <router-outlet></router-outlet>
       </div>
