--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
       <section class="lg:w-full mb-12">
-        <h3 #headerDocuments class="mx-4 mb-8 text-2xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-3xl">
+        <h3 #headerDocuments class="md:mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
           Documents
         </h3>
         <app-api-item id="GET-documents" [apiItem]="getDocumentsApiItem"></app-api-item>
@@ -46,7 +46,7 @@
         <app-api-item id="GET-document-upload" [apiItem]="getDocumentUploadApiItem" [isCollapsed]="true"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerSearch class="mx-4 mb-8 text-2xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-3xl">
+        <h3 #headerSearch class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
           Search
         </h3>
         <app-api-item id="POST-search" [apiItem]="postSearchApiItem"></app-api-item>
